# Gobang.Chessapp.C

./: .CheDef.h.swp  .gitignore  CMakeLists.txt  Che.h  CheData.c  CheData.h  CheDef.h  CheGlobal.c  CheGlobal.h  CheMain.c  CheTUI.c  CheTUI.h  README.md  chessapp.sln  chessapp.vcxproj  chessapp.vcxproj.filters  main
Chessapp/: .CheTUI.c.swo  CMakeLists.txt  Che.h  CheData.c  CheData.h  CheDef.h  CheGlobal.c  CheGlobal.h  CheMain.c  CheTUI.c  CheTUI.h
Core/: CMakeLists.txt
Core/Interface/: CMakeLists.txt  Cor.h  CorDef.h
Core/Src/: CMakeLists.txt  Cor.c  Cor.h
Core/Test/: CMakeLists.txt  CoreTest.c
Gobang.Core.C/Src/Core.Main/: Core.c  Core.h  CoreDefinitions.h
Gobang.Core.C/Src/Core.PointField/: CorePointField.c  CorePointField.h
Gobang.Core.C/Src/Core.Random/: CoreRandom.c  CoreRandom.h  CoreRandomUtility.c  CoreRandomUtility.h
Gobang.Core.C/Src/Core.RenjuGroup/: CoreRenju.c  CoreRenju.h  CoreRenjuGroup.c  CoreRenjuGroup.h  CoreRenjuGroupList.c  CoreRenjuGroupList.h  CoreRenjuPattern.c  CoreRenjuPattern.h  CoreRenjuRange.c  CoreRenjuRange.h  CoreRenjuRangeGroup.c  CoreRenjuRangeGroup.h
Gobang.Core.C/Src/Core.Utility/: CoreBoard.c  CoreBoard.h  CoreMathUtils.h  CorePair.c  CorePair.h
Sounds/: ChessappSound.rc
Src/: CMakeLists.txt
Src/Chessapp.Main/: CMakeLists.txt  ChessappDefinitions.h  ChessappDispatch.c  ChessappDispatch.h  ChessappGlobalConfig.c  ChessappGlobalConfig.h  ChessappMain.c
Src/Chessapp.Utility/: AudioPlayer.c  AudioPlayer.h  CMakeLists.txt  NetworkManager.c  NetworkManager.h
Src/DataModel/: CMakeLists.txt  CheGlobal.h
Src/DataModel/AttributedString/: AttributedString.c  AttributedString.h
Src/DataModel/DataUtility/: DataComparison.c  DataComparison.h  DataConversion.c  DataConversion.h  DataInteraction.c  DataInteraction.h
Src/DataModel/GameData/: GamePrefabConfig.c  GamePrefabConfig.h  GameRecordTable.c  GameRecordTable.h  GameTmpData.c  GameTmpData.h
Src/DataModel/Location/: Location.c  Location.h
Src/DataModel/Pair/: IntPair.h  StringPair.c  StringPair.h
Src/DataModel/Point/: Point.c  Point.h
Src/DataModel/RenjuGroup/: RenjuGroup.c  RenjuGroup.h
Src/TextUserInterface/: CMakeLists.txt  CheTUI.c  CheTUI.h  TuiDefinitions.h  TuiUserInteraction.c  TuiUserInteraction.h  TuiUtility.h
Src/TextUserInterface/Page/: Page.c  Page.h  PageID.h  PageOption.h
Src/TextUserInterface/Page/AboutChessplayerPage/: AboutChePage.c  AboutChePage.h
Src/TextUserInterface/Page/AboutProjectPage/: AboutProPage.c  AboutProPage.h
Src/TextUserInterface/Page/GamePage/: GamePage.c  GamePage.h
Src/TextUserInterface/Page/HomePage/: HomePage.c  HomePage.h
Src/TextUserInterface/Page/PreferencesAndSettingsPage/: PreAndSetPage.c  PreAndSetPage.h
Src/TextUserInterface/Page/PvCPrefabPage/: PvcPrefabPage.c  PvcPrefabPage.h
Src/TextUserInterface/Route/: Route.c  Route.h
Src/TextUserInterface/unix/: ConsoleDoubleBuffer.c  ConsoleDoubleBuffer.h  SmartDisplay.h  VirtualTerminalSequences.h
Src/TextUserInterface/win32/: ConsoleDoubleBuffer.c  ConsoleDoubleBuffer.h  SmartDisplay.h  VirtualTerminalSequences.h
